# legal_factory_ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_openrouter_lawyers.py  0003_documents_processing.py  0004_structured_legal_safeguards.py  0005_verdict_generated_documents.py  0006_curated_legal_rag.py  0007_company_profile_foundation.py  0008_document_template_foundation.py  0009_auth_roles_foundation.py  0010_chat_section.py  0011_app_settings.py  0012_verdict_response_skeleton.py  0013_p4_source_packages.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  agents.py  auth.py  chats.py  company_profile.py  document_templates.py  documents.py  generated_documents.py  health.py  legal_sources.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/schemas/: __init__.py  agents.py  approvals.py  audit.py  chats.py  company_profile.py  costs.py  document_templates.py  rag.py  (+10 more)
backend/tests/: conftest.py  test_admin_users.py  test_agent_seed.py  test_audit_log.py  test_auth.py  test_chat_context.py  test_company_profile.py  test_core_api.py  test_document_templates.py  test_documents.py  test_health.py  test_openrouter_lawyers.py  test_p4a_source_inventory.py  test_p4b_rag_planner.py  test_p4c_source_packages.py  test_section_routing.py  test_sections.py  test_stage4_safeguards.py  test_stage5_generated_documents.py  test_stage6_legal_rag.py  test_stage75d_retrieval_ranking.py  test_stage7_4_legal_chunker_real_law.py  test_stage7_legal_source_readiness.py  test_verdict_mode.py  test_viewer_read_only.py
(+105 files in other folders)
