[project]
name = "legal-factory-ai-backend"
version = "0.1.0"
description = "FastAPI backend foundation for Legal Factory AI."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.12",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
